# chronos

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json
chronos_web/: manage.py
chronos_web/chronos/: asgi.py  settings.py  urls.py  wsgi.py
chronos_web/tasks/: forms.py  models.py  urls.py  views.py
chronos_web/tasks/migrations/: 0001_initial.py  0002_alter_task_children_alter_task_description.py  0003_alter_task_children.py  0004_remove_task_children_task_depencecies.py  0005_alter_task_queue.py  0006_remove_task_queue_delete_queue.py  0007_rename_depencecies_task_dependencies.py
chronos_web/tasks/static/tasks/css/: style.css
chronos_web/tasks/static/tasks/js/: taskStatusFlow.js  taskStatusFlowIndex.js
chronos_web/tasks/templates/tasks/: continuations.html  create.html  createTask.html  detail.html  index.html  navbar.html
