[project]
name = "chronos"
version = "0.1.0"
description = "Simple task management tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "djlint>=1.36.4",
    "django-stubs>=5.2.0",
    "django-stubs-ext>=5.2.0",
]
